# bpsr-checker

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.en.md  README.md  buffs.html  index.html  package-lock.json  package.json  self_status.html  tsconfig.json  vite.config.ts
.claude/: settings.json
.github/workflows/: release.yml
core/: Cargo.toml  build.rs
core/data/json/: ConsumableBuffIds.json  ImagineSkillNames.json  MonsterNameBoss.en.json  MonsterNameBoss.json  RoleSkillImagineIds.json  SkillName.ja.json  SkillName.json
core/src/: compute.rs  lib.rs  models.rs  probe.rs
core/src/capture/: mod.rs  server.rs  windivert.rs
core/src/engine/: buff_dictionary.rs  buff_tracker.rs  class.rs  consumables.rs  demo.rs  encounter.rs  entity.rs  history.rs  imagine_overrides.rs  imagine_skills.rs  mod.rs  monster_names.rs  name_cache.rs  processor.rs  runtime_settings.rs  skill_names.rs
core/src/protocol/: constants.rs  opcodes.rs  packet_parser.rs  pb.proto  pb.rs
docs/: NAMES_PROVENANCE.md  REVIEW-2026-06-01.md
docs/images/: SHOTLIST.md
installer/: installer.nsi
scripts/: gen-consumable-names.py  gen-names.mjs  package-slint.ps1  reset-windivert.ps1  run-mcp.ps1
slint-app/: Cargo.toml  app.rc  build.rs
slint-app/data/: BuffName.en.json  BuffName.ja.json  ConsumableBuffNames.ja.json
slint-app/src/: best_records.rs  buff_names.rs  capture.rs  consumable_names.rs  format.rs  main.rs  overlay.rs  settings.rs  tray.rs  watchlist.rs  window_state.rs
slint-app/translations/en/LC_MESSAGES/: bpsr-app.po
slint-app/translations/ja/LC_MESSAGES/: bpsr-app.po
slint-app/translations/zh/LC_MESSAGES/: bpsr-app.po
slint-app/ui/: app.slint
slint-poc/: Cargo.toml  README.md  build.rs
slint-poc/src/: main.rs  mock.rs  overlay.rs  window_state.rs
slint-poc/ui/: buff_overlay.slint  common.slint  dps_list.slint  poc.slint
src/: App.tsx  index.tsx  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: lib.rs  main.rs
src-tauri/src/bridge/: commands.rs  models.rs
src-tauri/src/capture/: binary_reader.rs  mod.rs  server.rs  tcp_reassembler.rs  windivert.rs
src-tauri/src/engine/: buff_dictionary.rs  buff_source.rs  buff_tracker.rs  calculator.rs  class.rs  combat_stats.rs  encounter.rs  entity.rs  history.rs  mod.rs  monster_names.rs  name_cache.rs  processor.rs  runtime_settings.rs  selected_uid.rs  skill_names.rs
src-tauri/src/protocol/: constants.rs  mod.rs  opcodes.rs  packet_parser.rs  pb.proto  pb.rs
src/buffs/: BuffOverlay.tsx  CircularBuff.tsx  PlayerBuffRow.tsx  icons.tsx  index.tsx  types.ts
src/components/: Header.tsx  HistoryView.tsx  PlayerTable.tsx  SettingsPanel.tsx  SkillTable.tsx  Sparkline.tsx  TakenAttackersView.tsx  TakenSkillsView.tsx  ThreeMinResultModal.tsx
src/lib/: crossWindowFlag.ts  persisted.ts
src/lib/data/json/: BuffName.ja.json  SkillName.json
src/lib/i18n/: en.json  index.ts  ja.json
src/self_status/: BuffIconCell.tsx  SelfStatusOverlay.tsx  index.tsx  store.ts  types.ts
src/stores/: buffs.ts  encounter.ts  measureMode.ts  settings.ts  watchlist.ts
tools/: gen-imagine-names.py
