[package]
name = "bpsr-core"
version = "0.8.20"
description = "コア: パケット観測・解析・DPS集計（UI/Tauri非依存）"
edition = "2024"
license = "GPL-3.0-only"

[lib]
name = "bpsr_core"

[build-dependencies]
prost-build = "0.14"

[dependencies]
bytes = "1"
byteorder = "1"
chrono = "0.4"
etherparse = "0.19"
log = "0.4"
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 移行中のみ: models が specta::Type を derive し src-tauri の TS バインディング生成に供する。
# specta は tauri 非依存のため core の「Tauri非依存」方針は維持。S6 で除去予定。
specta = { version = "2.0.0-rc.24", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "sync", "rt-multi-thread", "time"] }
zstd = "0.13"

[target.'cfg(target_os = "windows")'.dependencies]
windivert = { version = "0.6", features = ["vendored"] }
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_Services",
] }
