[package]
name = "bpsr-app"
version = "1.2.1"
description = "Blue Protocol: Star Resonance 向け軽量DPSチェッカー (Slint版)"
edition = "2024"
license = "GPL-3.0-only"

[[bin]]
name = "bpsr-app"
path = "src/main.rs"

[build-dependencies]
slint-build = "1"
embed-manifest = "1.4"
embed-resource = "2"

[dependencies]
slint = "1"
i-slint-backend-winit = { version = "1", features = ["renderer-femtovg"] }
bpsr-core = { path = "../core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
arboard = { version = "3", default-features = false, features = ["image-data"] }

[target.'cfg(target_os = "windows")'.dependencies]
tray-icon = "0.19"
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
