[package]
name = "slint-poc"
version = "0.1.0"
edition = "2021"
description = "Slint オーバーレイ検証 PoC (使い捨て): 透明/最前面/クリックスルー/複数モニタ/位置復元"
license = "GPL-3.0-only"
publish = false

[dependencies]
slint = "1"
i-slint-backend-winit = { version = "1", features = ["renderer-femtovg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[build-dependencies]
slint-build = "1"
